finished getSources api & getNews api.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,10 +5,10 @@
   "settings": "الإعدادات",
   "language": "اللغة",
   "sports": "رياضة",
-  "politics": "السياسة",
+  "technology": "التكنولوجيا",
   "health": "الصحة",
   "business": "عمل",
-  "enviroment": "بيئة",
+  "general": "عام",
   "science": "علم",
   "news_title": "عنوان الخبر",
   "view_full_article": "عرض المقال كاملا",
