--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,10 +5,10 @@
   "settings": "Settings",
   "language": "Language",
   "sports": "Sports",
-  "politics": "Politics",
+  "technology": "Technology",
   "health": "Health",
   "business": "business",
-  "enviroment": "Enviroment",
+  "general": "General",
   "science": "Science",
   "news_title": "News Title",
   "view_full_article": "View Full Article",
